Fixed spacing issue in topright menu (Firefox only).

--- a/ontopia/src/webapps/ontopoly/src/main/java/ontopoly/resources/stylesheet.css
+++ b/ontopia/src/webapps/ontopoly/src/main/java/ontopoly/resources/stylesheet.css
@@ -31,7 +31,7 @@ select, option { max-width: 500px; }
 #header a:visited { color: white; margin: 0px; padding: 0px; }
 #header a:hover { color: white; text-decoration: underline; margin: 0px; padding: 0px; }
 
-#header #topRightMenuContainer { padding: 16px 0 0 16px; text-align: right;	}
+#header #topRightMenuContainer { padding: 15px 0 0 15px; text-align: right;	}
 #header #topRightMenu { background-image: url('../../resources/ontopoly.images.ImageResource/topmenubg.gif'); color: white; float: right; height: 25px; margin: 0; text-align: right; white-space: nowrap; }
 
 #header #tabMenuContainer { float: left; height: 66px; }
